# hugin-api

./: .dockerignore  .env  .gitignore  .gitmodules  .mocharc.js  .mocharc.ts  .sequelizerc  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  HELP.md  LICENSE  README.md  alert.js  app.js  build.gradle  build.gradle.kts  docker-compose.test.yml  docker-compose.yml  gradle.properties  package.json  queries.sql  server.js  settings.gradle  settings.gradle.kts  start.sh  thunder.json  usageWarning.js  wallet.json
.github/: FUNDING.yml
.run/: Build Docker Image Local.run.xml  Docker Compose Dev DBs.run.xml  HuginApplication.run.xml  code-coverage-report.run.xml  code-coverage.run.xml  db_create_test.run.xml  db_migrate.run.xml  db_reset.run.xml  dev.run.xml  pretest.run.xml  server.run.xml  test.run.xml
ansible/: README.md  ansible.cfg  ansible.sh  hosts.inventory  prod.inventory  provision_vps.yml  staging.inventory
cockpit/: .gitignore  settings.ini
configs/: cacheControl.js  huginSyncer.js  postgresql.js  rateLimit.js  swagger.js  walletBackend.js
controllers/: hashtagController.js  indexController.js  postController.js  postEncryptedController.js
deploy/: deploy.sh  init-letsencrypt.sh  nginx.conf  setup.sh
diagram/: database-diagram.drawio
diagrams/: database-diagram.drawio
http/: hashtags.http  posts-encrypted.http  posts.http
lite/: .dockerignore  .env  .mockarc.js  Dockerfile  README.md  docker-compose.yml  package.json  server.js
ml/: Dockerfile  README.md  requirements.txt  settings.ini
routes/: hashtagRouter.js  indexRouter.js  postRouter.js  (+1 more)
(+324 files in other folders)
