[package]
name = "hugin-api"
version = "0.1.0"
edition = "2021"
authors = ["Marcus Cvjeticanin"]
readme = "README.md"
repository = "https://github.com/kryptokrona/hugin-api"
license = "BSD-3 Clause"
rust-version = "1.69"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
sqlite = "0.30.4"
log = "0.4.17"